--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/express": "^4.11.1"
+    "@types/express": "^4.11.1",
+    "@types/node": "^9.6.6"
   }
 }
