--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "devDependencies": {
     "@types/node": "^9.6.5",
     "typescript": "^2.8.1"
+  },
+  "dependencies": {
+    "@angular/animations": "^5.2.10",
+    "@angular/cdk": "^5.2.5",
+    "@angular/material": "^5.2.5"
   }
 }
