--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongoose": "^5.0.16",
+    "multer": "^1.3.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.11.1",
+    "@types/mongoose": "^5.0.10",
+    "@types/multer": "^1.3.6",
     "@types/node": "^9.6.6"
   }
 }
