--- a/apps/rubbish/proxy.config.json
+++ b/apps/rubbish/proxy.config.json
@@ -1,6 +1,11 @@
-{ 
-		"/api/*": {
-		"target": "http://localhost:3000",
-		"secure": false
-	}
+{
+  "/api/*": {
+    "target": "http://localhost:3000",
+    "secure": false
+  }
+  "/assets/*": {
+    "target": "http://localhost:3000",
+    "secure":  false
+  }
+
 }
