--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-redis": "^3.3.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.16",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
