--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.11.1",
     "@types/mongoose": "^5.0.10",
     "@types/multer": "^1.3.6",
-    "@types/node": "^9.6.6"
+    "@types/node": "^9.6.6",
+    "@types/passport": "^0.4.5"
   }
 }
