--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
     "@types/mongoose": "^5.0.10",
     "@types/multer": "^1.3.6",
     "@types/node": "^9.6.6",
