--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.16",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -31,6 +32,7 @@
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
     "@types/mongoose": "^5.0.10",
+    "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.6",
     "@types/node": "^9.6.6",
     "@types/passport": "^0.4.5"
