--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fuhk": "^1.3.1",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
