--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
     "connect-redis": "^3.3.3",
+    "darknet": "^1.1.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
