--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "@types/node": "^9.6.5",
     "typescript": "^2.8.1"
+  },
+  "dependencies": {
+    "darknet": "^1.0.3",
+    "rxjs": "^6.2.0"
   }
 }
