--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "path": "^0.12.7",
@@ -38,6 +40,7 @@
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.6",
     "@types/node": "^9.6.6",
-    "@types/passport": "^0.4.5"
+    "@types/passport": "^0.4.5",
+    "@types/passport-facebook": "^2.1.8"
   }
 }
