--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^2.0.0",
+    "@types/request": "^2.47.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
@@ -30,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "path": "^0.12.7",
+    "request": "^2.88.0",
     "rxjs": "^6.2.0"
   },
   "devDependencies": {
