--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^2.0.0",
+    "@types/nodemailer": "^4.6.2",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-ensure-login": "^0.1.1",
@@ -24,6 +25,7 @@
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
