--- a/apps/rubbish/package.json
+++ b/apps/rubbish/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.1",
     "core-js": "^2.5.4",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
