--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "2"
 services:
   app:
+    environment:
+      - PORT=8080
+      - MONGO_URL=mongodb://mongodb:27017/rubbish
     container_name: capstone
     restart: always
     build: .
     ports:
-      - "3000:3000"
+      - "8080:8080"
     links:
       - mongo
   mongo:
